--- a/index.html
+++ b/index.html
@@ -25,5 +25,28 @@
 </div>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="./script.js"></script>
   <!-- Comment out previous line for mobile demonstration -->
+
+<!-- <footer>
+  <nav class="main-nav">
+    <ul>
+      <li>
+        <a href="#" class="About Us">About Us</a>
+      </li>
+      <li>
+        <a href="#">Contact Us</a>
+      </li>
+    </ul>
+  </nav>
+</footer> -->
+
+<footer class="footer">
+  <nav class="container">
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><p>Contact Us: 5551234678</p></li>
+    </ul>
+  </nav>
+</footer>
+
 </body>
 </html>
